# speech-analytics-gpu-server

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  deploy-remote.sh  deploy.sh  docker-compose.yml  pyproject.toml  requirements-specification.md
app/api/: auth.py  main.py  routes.py  schemas.py
app/cli/: __main__.py
app/core/: config.py  db.py  models.py  redis.py
app/worker/: main.py  pipeline.py  tasks.py  webhook.py
migrations/: env.py
migrations/versions/: 001_initial.py
