[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speech-analytics-gpu-server"
version = "2.0.0"
description = "Transcription and diarization service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "arq>=0.26",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "structlog>=24.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
    "click>=8.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.5",
    "torchaudio>=2.5",
    "whisperx",
    "pyannote.audio>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
